# losrs

./: .markdownlint-cli2.jsonc  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  TODO.md  rustfmt.toml
.github/workflows/: lint.yaml  release.yaml
crates/test_utils/: Cargo.toml
demo/: demo.tape
demo/pages/: lens.md
docs/: configuration.md
src/: lib.rs  main.rs  output.rs  parse.rs  review.rs  settings.rs  storage.rs  terminal.rs  types.rs
tests/: cli.rs  integration.rs  interactive.rs  output.rs  review.rs  txtest.rs
tests/cases/: config_help.txtar  config_show.txtar  config_show_with_env_override.txtar  metadata.txtar  metadata_help.txtar  metadata_jsonlines.txtar  review_card_artificial_not_due.txtar  review_card_before_last_reviewed.txtar  review_card_not_due.txtar  review_card_not_due_early.txtar  review_card_second_remembered_no.txtar  review_card_seed_0.txtar  review_card_seed_0_jsonlines.txtar  review_card_seed_100.txtar  review_card_without_meta_jsonlines.txtar  review_card_without_meta_remembered_no.txtar  review_card_without_meta_remembered_yes.txtar  review_delay.txtar  review_help.txtar  review_remembered_no.txtar  review_remembered_yes.txtar  review_remembered_yes_csn_assigned_not_first.txtar  review_remembered_yes_csn_not_assigned_not_first.txtar  review_two_cards_seed_0.txtar  review_two_cards_seed_100.txtar  root_help.txtar  show_card_is_deeply_nested.txtar  show_card_nested_no_response.txtar  show_card_no_response.txtar  show_card_with_data_after_metadata.txtar  show_card_with_unicode_prompt.txtar  show_format_clean.txtar  show_format_logseq.txtar  show_format_logseq_card_is_deeply_nested.txtar  show_format_logseq_card_with_fsrs_metadata.txtar  show_format_logseq_card_with_reordered_metadata.txtar  show_format_logseq_card_without_metadata.txtar  show_format_storage.txtar  show_format_storage_card_is_deeply_nested.txtar  show_format_storage_card_with_fsrs_metadata.txtar  (+6 more)
tests/common/: mod.rs
tests/snapshots/: cli__card_has_meta_review_remembered_no.snap  cli__card_has_meta_review_remembered_yes.snap  cli__card_with_data_after_metadata.snap  cli__card_with_unicode_prompt.snap  cli__config_help.snap  cli__config_show_with_env_override.snap  cli__metadata.snap  cli__metadata_help.snap  cli__multiple_top_level_cards.snap  cli__one_of_top_level_cards.snap  cli__review_card_before_last_reviewed.snap  cli__review_card_not_ready.snap  cli__review_card_second_remembered_no.snap  cli__review_card_seed_0.snap  cli__review_card_seed_100.snap  cli__review_card_without_meta_remembered_no.snap  cli__review_card_without_meta_remembered_yes.snap  cli__review_help.snap  cli__review_remembered_no.snap  cli__review_remembered_yes.snap  cli__root_help.snap  cli__show.snap  cli__show_help.snap  (+58 more)
(+1 files in other folders)
