[package]
name = "losrs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
crossterm = "0.29.0"
markdown = "1.0.0"
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }
rs-fsrs = { version = "1.2.1", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
tempfile = "3.20.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["filters"] }
insta-cmd = "0.6.0"
rexpect = "0.6.2"

[profile.dev.package]
insta.opt-level = 3
