[workspace]
members = [".", "crates/*"]

[package]
name = "losrs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
config = { version = "0.15.14", default-features = false, features = ["toml"] }
confy = "2.0.0"
crossterm = "0.29.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
markdown = "1.0.0"
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }
regex = { version = "1.12.2", default-features = false }
rs-fsrs = { version = "1.2.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
viuer = { version = "0.9.2", default-features = false }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
rexpect = "0.6.2"
test_utils = { path = "crates/test_utils" }
txtar = "1.0.0"
